--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
