--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "format:check": "prettier --check",
-    "format:write": "prettier --write",
-    "test": "jest --runInBand --detectOpenHandles --forceExit",
-    "lint:check": "eslint",
-    "lint:fix": "eslint src --fix --cache"
+    "lint": "eslint . ",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "test": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "repository": {
     "type": "git",
